--- a/content/kr/posts/2024-03-13-20-55.md
+++ b/content/kr/posts/2024-03-13-20-55.md
@@ -5,7 +5,7 @@ description: 당신에게 필요한 상품을 소개할게요
 tags:
   - 생활용품
 ---
-{{< rawhtml >}} ⚠️ 평점 4.0이상의 제품만을 소개합니다.{{< /rawhtml >}}
+{{< rawhtml >}}  ⚠️ 평점과 후기를 참고해 엄선된 제품만을 소개합니다.{{< /rawhtml >}}
 
 **화장대: 아름다움과 질서의 조화**
 
