--- a/content/kr/posts/2024-03-14-14-35.md
+++ b/content/kr/posts/2024-03-14-14-35.md
@@ -5,7 +5,7 @@ description: 당신에게 필요한 상품을 소개할게요
 tags:
   - 가전디지털
 ---
-{{< rawhtml >}}<div class="toc" style="text-align: center; height: 50px; line-height: 2;">  <p>⚠️ 평점 4.0이상의 제품만을 소개합니다.<br></p></div> {{< /rawhtml >}}
+{{< rawhtml >}}<div class="toc" style="text-align: center; height: 50px; line-height: 2;">  <p>⚠️ 평점과 후기를 참고해 엄선된 제품만을 소개합니다.<br></p></div> {{< /rawhtml >}}
 
 **노트북: 당신의 디지털 삶의 필수품**
 
