--- a/content/kr/posts/2024-03-14-16-27.md
+++ b/content/kr/posts/2024-03-14-16-27.md
@@ -5,7 +5,7 @@ description: 당신에게 필요한 상품을 소개할게요
 tags:
   - 헬스/건강식품
 ---
-{{< rawhtml >}}<div class="toc" style="text-align: center; height: 50px; line-height: 2;">  <p>⚠️ 평점 4.0이상의 제품만을 소개합니다.<br></p></div> {{< /rawhtml >}}
+{{< rawhtml >}}<div class="toc" style="text-align: center; height: 50px; line-height: 2;">  <p>⚠️ 평점과 후기를 참고해 엄선된 제품만을 소개합니다.<br></p></div> {{< /rawhtml >}}
 
 **아르기닌: 체내 성장과 회복에 필수적인 아미노산**
 
