--- a/content/kr/posts/2024-03-14-19-00.md
+++ b/content/kr/posts/2024-03-14-19-00.md
@@ -6,7 +6,7 @@ tags:
   - 출산/유아동
   - 낮잠이불
 ---
-{{< rawhtml >}}<div class="toc" style="text-align: center; height: 50px; line-height: 2;">  <p>⚠️ 평점 4.0이상의 제품만을 소개합니다.<br></p></div> {{< /rawhtml >}}
+{{< rawhtml >}}<div class="toc" style="text-align: center; height: 50px; line-height: 2;">  <p>⚠️ 평점과 후기를 참고해 엄선된 제품만을 소개합니다.<br></p></div> {{< /rawhtml >}}
 
 **편안한 낮잠의 비결: 낮잠이불**
 
