--- a/content/kr/posts/2024-03-14-19-40.md
+++ b/content/kr/posts/2024-03-14-19-40.md
@@ -6,7 +6,7 @@ tags:
   - 출산/유아
   - 기저귀 가방
 ---
-{{< rawhtml >}}<div class="toc" style="text-align: center; height: 50px; line-height: 2;">  <p>⚠️ 평점 4.0이상의 제품만을 소개합니다.<br></p></div> {{< /rawhtml >}}
+{{< rawhtml >}}<div class="toc" style="text-align: center; height: 50px; line-height: 2;">  <p>⚠️ 평점과 후기를 참고해 엄선된 제품만을 소개합니다.<br></p></div> {{< /rawhtml >}}
 
 **기저귀 가방: 아기 관리에 필수품**
 
