--- a/content/kr/posts/2024-03-14-20-17.md
+++ b/content/kr/posts/2024-03-14-20-17.md
@@ -6,7 +6,7 @@ tags:
   - 식품
   - 유산균
 ---
-{{< rawhtml >}}<div class="toc" style="text-align: center; height: 50px; line-height: 2;">  <p>⚠️ 평점 4.0이상의 제품만을 소개합니다.<br></p></div> {{< /rawhtml >}}
+{{< rawhtml >}}<div class="toc" style="text-align: center; height: 50px; line-height: 2;">  <p>⚠️ 평점과 후기를 참고해 엄선된 제품만을 소개합니다.<br></p></div> {{< /rawhtml >}}
 
 **유산균: 건강과 웰빙을 위한 필수적 요소**
 
