--- a/content/kr/posts/2024-03-15-17-55.md
+++ b/content/kr/posts/2024-03-15-17-55.md
@@ -6,7 +6,7 @@ tags:
   - 여성패션
   - 여성용 가디건
 ---
-{{< rawhtml >}}<div class="toc" style="text-align: center; height: 50px; line-height: 2;">  <p>⚠️ 평점 4.0이상의 제품만을 소개합니다.<br></p></div> {{< /rawhtml >}}
+{{< rawhtml >}}<div class="toc" style="text-align: center; height: 50px; line-height: 2;">  <p>⚠️ 평점과 후기를 참고해 엄선된 제품만을 소개합니다.<br></p></div> {{< /rawhtml >}}
 
 **여성을 위한 가디건: 편안함과 세련함의 완벽한 조화**
 
