--- a/content/kr/posts/2024-03-15-18-19.md
+++ b/content/kr/posts/2024-03-15-18-19.md
@@ -6,7 +6,7 @@ tags:
   - 남성패션
   - 에코백
 ---
-{{< rawhtml >}}<div class="toc" style="text-align: center; height: 50px; line-height: 2;">  <p>⚠️ 평점 4.0이상의 제품만을 소개합니다.<br></p></div> {{< /rawhtml >}}
+{{< rawhtml >}}<div class="toc" style="text-align: center; height: 50px; line-height: 2;">  <p>⚠️ 평점과 후기를 참고해 엄선된 제품만을 소개합니다.<br></p></div> {{< /rawhtml >}}
 
 **지속 가능한 쇼핑의 선택, 에코백**
 
