--- a/content/kr/posts/2024-03-14-13-57.md
+++ b/content/kr/posts/2024-03-14-13-57.md
@@ -5,7 +5,7 @@ description: 당신에게 필요한 상품을 소개할게요
 tags:
   - 가전디지털
 ---
-{{< rawhtml >}}<div class="toc" style="text-align: center; height: 50px; line-height: 2;">  <p>⚠️ 평점 4.0이상의 제품만을 소개합니다.<br></p></div> {{< /rawhtml >}}
+{{< rawhtml >}}<div class="toc" style="text-align: center; height: 50px; line-height: 2;">  <p>⚠️ 평점과 후기를 참고해 엄선된 제품만을 소개합니다.<br></p></div> {{< /rawhtml >}}
 
 **편리한 청소를 위한 혁신적인 로봇 청소기**
 
