--- a/content/kr/posts/2024-03-14-20-55.md
+++ b/content/kr/posts/2024-03-14-20-55.md
@@ -6,7 +6,7 @@ tags:
   - 가구/홈인테리어
   - 커튼
 ---
-{{< rawhtml >}}<div class="toc" style="text-align: center; height: 50px; line-height: 2;">  <p>⚠️ 평점 4.0이상의 제품만을 소개합니다.<br></p></div> {{< /rawhtml >}}
+{{< rawhtml >}}<div class="toc" style="text-align: center; height: 50px; line-height: 2;">  <p>⚠️ 평점과 후기를 참고해 엄선된 제품만을 소개합니다.<br></p></div> {{< /rawhtml >}}
 
 **커튼: 가정에 안락함과 스타일 더하기**
 
